# fastapi-startup-project

./: cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .dockerignore  .env.example  .env.taskfile.example  .gitignore  Dockerfile  README.md  Taskfile.yml  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
{{cookiecutter.project_slug}}/app/: config.py  database.py  depends.py  enums.py  exceptions.py  logger.py  main.py
{{cookiecutter.project_slug}}/app/api/v1/: health.py
{{cookiecutter.project_slug}}/app/core/: logger.py  settings.py
{{cookiecutter.project_slug}}/app/models/: __init__.py  _base.py  _mixin.py  user.py
{{cookiecutter.project_slug}}/app/mongo_models/: __init__.py  sample.py
{{cookiecutter.project_slug}}/migrations/: env.py
{{cookiecutter.project_slug}}/tests/: __init__.py  conftest.py  test_{{cookiecutter.project_slug}}.py
