[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.0.1"
description = ""
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
python-dotenv = "^0.19.1"
loguru = "^0.5.3"
pymongo = "^3.12.0"
SQLAlchemy = "^1.4.25"
sqlalchemy-mixins = "^1.5"
arrow = "^1.2.0"
{%- if cookiecutter.sql == "postgres" -%}
psycopg2 = "^2.9.3"
{%- endif -%}

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
pytest = "^6.2.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
